--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "assert": "^1.3.0",
     "async": "~0.2.8",
     "express": "~3.2.4",
+    "mongodb": "^2.1.19",
     "socket.io": "~0.9.14"
   }
 }
