--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
+  "name": "node-mongo-example",
+  "version": "0.0.1",
+  "description": "Node Mongoose Example application",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "private": true,
+  "author": "David Sabalete <dsabalete@gmail.com>",
   "dependencies": {
     "assert": "^1.3.0",
-    "async": "~0.2.8",
     "express": "~3.2.4",
     "mongodb": "^2.1.19",
-    "socket.io": "~0.9.14"
+    "mongoose": "^4.4.17"
   }
 }
