--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "assert": "^1.3.0",
     "express": "~3.2.4",
     "mongodb": "^2.1.19",
-    "mongoose": "^4.4.17"
+    "mongoose": "^4.4.17",
+    "mongoose-currency": "^0.2.0"
   }
 }
